<resources>
    <string name="app_name">ContentProviderContact</string>
    <string name="name_of_the_person">Name of the person</string>
    <string name="number">Number</string>
    <string name="start">Start</string>
    <string name="seconds_remaining">Seconds Remaining</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="contact_image">contact Image</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number:</string>
    <string name="name">Name:</string>
    <string name="choose_from">Choose From</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove Photo</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
</resources>
