<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from"
        android:textColor="@color/colorGrey"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:textSize="@dimen/sp_24"/>
    <View
        style="@style/custom_view"
        android:layout_height="@dimen/dp_4"/>
    <TextView
        android:id="@+id/tv_gallery"
        android:text="@string/gallery"
        style="@style/custom_alert_text"/>
    <View
        style="@style/custom_view"/>
    <TextView
        android:id="@+id/tv_camera"
        android:text="@string/camera"
        style="@style/custom_alert_text"/>
    <View
        style="@style/custom_view"/>
    <TextView
        android:id="@+id/tv_remove"
        android:text="@string/remove"
        style="@style/custom_alert_text"/>
    <View
        style="@style/custom_view"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        style="@style/custom_alert_text"/>
</LinearLayout>