<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/corner_dp_2"
    android:layout_marginBottom="@dimen/dp_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_pic"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:contentDescription="@string/contact_image"
            app:civ_border_width="@dimen/dp_2"
            app:civ_border_color="@color/colorWhite"
            android:src="@drawable/ic_account_circle_black_24dp" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/custom_textView"
            android:layout_toEndOf="@+id/iv_user_pic"
            android:text="@string/name_of_the_person" />

        <TextView
            android:id="@+id/tv_number"
            style="@style/custom_textView"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/iv_user_pic"
            android:text="@string/number" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
