<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.admin1.contentprovidercontact.activity.EditProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_pic"
        android:layout_width="@dimen/dp_120_image"
        android:layout_height="@dimen/dp_120_image"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_centerHorizontal="true"
        app:civ_border_width="@dimen/dp_2"
       />
    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_below="@+id/civ_pic"
        style="@style/custom_linear_layout">
        <TextView
            android:text="@string/name"
            style="@style/edit_profile_text"/>
        <EditText
            android:id="@+id/et_name"
            style="@style/edit_profile_edit"
            android:maxLength="25"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_number"
        style="@style/custom_linear_layout"
        android:layout_below="@+id/ll_name">
        <TextView
            android:text="@string/phone_number"
            style="@style/edit_profile_text"/>
        <EditText
            android:id="@+id/et_number"
            style="@style/edit_profile_edit"
            android:maxLength="15"
            android:inputType="phone"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_25"
        android:paddingEnd="@dimen/dp_60"
        android:paddingStart="@dimen/dp_60"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background"
        android:text="@string/save"/>
</RelativeLayout>
